feat: 升级 Java 21 + Spring Boot 4.1.1，并完成性能与代码质量重构
工具链
- Java 17 → 21；Spring Boot 3.3.4 → 4.1.1（Spring 7.0.9 / Security 7.1.1 /
  Hibernate 7.4.5 / Jackson 3.1.5 / Flyway 12.4.0 / Tomcat 11）
- springdoc-openapi 3.1.1、jjwt 0.13.0；迁移 Jackson 3 包名、
  MockMvc 测试注解与自动配置排除项

性能
- 目录/榜单/相关推荐/短视频/收藏/历史/创作中心/后台队列全部改为 SQL 级
  过滤排序分页，不再 findAll() 全表加载后内存排序
- ViewFactory 批量视图装配消除 N+1：19 个端点单请求 SQL 合计 842 → 103（-87.8%），
  且不再随数据总量增长（页大小 5→40 时恒定 6 条）
- 有界 Caffeine 缓存替换只增不减的 ConcurrentHashMap（播放去重/短信限流/刷新令牌）
- 启用虚拟线程、HikariCP 调优、Hibernate 批处理与 HTTP 响应压缩
- 首次实测后追加优化：作者资料与认证/粉丝数合并为一条语句、点赞点踩合并，
  批量装配固定成本 8 → 6 条

数据库
- 新增 V6__list_and_ranking_indexes.sql：补齐 13 个缺失索引，并回填 published_at
  使排序键可走索引（原 COALESCE 表达式导致索引失效）
- 14 处分页补稳定并列键，消除跨页重复/遗漏

修复
- AdminService 使用仅在 H2 成立的 DATEDIFF('SECOND',…) → TIMESTAMPDIFF，MySQL 不再报错
- 趋势聚合列别名 day 与 H2 INTERVAL 关键字冲突
- 计数器回写触发整行 UPDATE → Video 加 @DynamicUpdate
- JwtAuthenticationFilter 对 Redis 黑名单查询加 5 秒失败熔断，避免 Redis 不可用时
  每个带令牌请求都白付一次连接尝试
- 统一 PermissionSets / PageResult / VideoTags，去掉多处重复实现

前端
- 移除 @/mocks 静态导入并把 USE_MOCK 改为可静态求值表达式，Mock 层不再进入生产产物
  （主包 gzip 131.7 → 114.4 KB，-13.2%）
- 降级轮询改请求真实榜单/通知接口，不再伪造数据
- package.json 补 packageManager: pnpm@10.18.3

部署
- Dockerfile / docker-compose 全面改用国内镜像源：基础镜像走
  docker.m.daocloud.io，Maven 走阿里云公共仓库，npm 走 npmmirror，
  全部可通过 .env 覆盖回官方源；运行镜像升级到 Java 21

测试与文档
- 新增 QueryCountGuardTest（N+1 查询次数回归护栏）与 EndpointCostReportTest
  （逐端点开销与页大小缩放曲线）；后端测试 18 项全绿
- 新增 PERFORMANCE_REPORT.md（升级前后 A/B 压测、规模化 A/B、端到端与前端产物）
- 新增 FRONTEND_UI_TEST_REPORT.md（5 类角色 19 用例 151 断言的真实浏览器 GUI 测试）